--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="menu-list">
                     <img src="img/menu-burger.jpg" class="menu-img">
                     <div class="menu-decription">
-                        <h4>Food Title</h4>
+                        <h4>Smoky Burger</h4>
                         <h5>$2.3</h5>
                         <p>Made with Italian Sauce, Chicken, and organice vegetables</p>
                         <input type="button" value="Order now" class="order-btn">
@@ -73,7 +73,7 @@
                 <div class="menu-list" >
                     <img src="img/menu-burger.jpg" class="menu-img">
                     <div class="menu-decription">
-                        <h4>Food Title</h4>
+                        <h4>Nice Burger</h4>
                         <h5>$2.3</h5>
                         <p>Made with Italian Sauce, Chicken, and organice vegetables</p>
                         <input type="button" value="Order now" class="order-btn">
@@ -100,7 +100,7 @@
                 <div class="menu-list">
                     <img src="img/menu-momo.jpg" class="menu-img">
                     <div class="menu-decription">
-                        <h4>Food Title</h4>
+                        <h4>Chicken Steam Momo</h4>
                         <h5>$2.3</h5>
                         <p >Made with Italian Sauce, Chicken, and organice vegetables</p>
                         <input type="button" value="Order now" class="order-btn">
